<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:shadowDx="9"
        android:shadowDy="9"
        android:shadowRadius="3"
        android:text="REGISTRO EXITOSO"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tu_nombre"
        android:layout_margin="20dp"
        android:textSize="22dp"/>

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tu_apellido"
        android:layout_marginTop="50dp"
        android:layout_margin="20dp"
        android:textSize="22dp"/>

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tu_edad"
        android:layout_marginTop="50dp"
        android:layout_margin="20dp"
        android:textSize="22dp"/>

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tu_correo"
        android:layout_marginTop="50dp"
        android:layout_margin="20dp"
        android:textSize="22dp"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:text="@string/btnOk"/>



</LinearLayout>